# tool_jors-db

./: .gitignore  package-lock.json  pyproject.toml
src/: db.py  main.py  test.db
